💄 style: Remove some CSS classes

--- a/src/SwashbucklerDiary.Rcl.Hybird/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
+++ b/src/SwashbucklerDiary.Rcl.Hybird/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
@@ -1,10 +1,10 @@
 @namespace SwashbucklerDiary.Rcl.Pages
 @inherits ImportantComponentBase
 
-<MCard Class="my-list-card"
+<MCard Class="mb-5"
        Elevation="0"
        Rounded="@("lg")">
-    <MList>
+    <MList Class="py-0">
         <MListItem OnClick="()=>showConfig=true">
             <MListItemIcon>
                 <MIcon>
