--- a/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCard.razor
@@ -19,7 +19,7 @@
             @(Value.Name)
         </MListItemContent>
 
-        <MListItemContent Class="setting-item-state">
+        <MListItemContent Class="flex-">
             <MListItemSubtitle>
                 @(diaryCount)
             </MListItemSubtitle>
