--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
@@ -8,7 +8,7 @@
                    MiniVariantWidth="76"
                    Touchless="true"
                    Style="top:initial !important;background-color:initial;">
-    <MList Nav>
+    <MList Nav Slim="false">
         @foreach (var item in Items)
         {
             <MainLayoutNavDrawerItem @key="item.Href"
