--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
@@ -37,7 +37,7 @@
             <MCard Class="mb-5"
                    Elevation="0"
                    Rounded="@("lg")">
-                <MList Class="dynamic-list-item-collection">
+                <MList>
                     @foreach (var item in sponsorTypeListItems)
                     {
                         <MListItem @key="item"
@@ -69,7 +69,7 @@
             <MCard Class="mb-5"
                    Elevation="0"
                    Rounded="@("lg")">
-                <MList Class="dynamic-list-item-collection">
+                <MList>
                     @foreach (var item in sponsors)
                     {
                         <MListItem @key="item">
