--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/UrlSchemePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/UrlSchemePage.razor
@@ -20,10 +20,10 @@
         }
     </MChipGroup>
 
-    <MCard Class="my-list-card"
+    <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")">
-        <MList Class="dynamic-list-item-collection">
+        <MList Class="py-0">
             @foreach (var item in urlSchemePaths)
             {
                 <MListItem @key="item"
