--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -7,10 +7,10 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="my-list-card"
+    <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")">
-        <MList>
+        <MList Class="py-0">
             <MListItem OnClick="()=>showEditAvatar=true">
                 <MListItemIcon>
                     <MIcon>
