--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/CalendarSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/CalendarSetting.razor
@@ -7,10 +7,10 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="my-list-card"
+    <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")">
-        <MList>
+        <MList Class="py-0">
             <MListItem OnClick="() => showFirstDayOfWeek = true">
                 <MListItemIcon>
                     <MIcon>
@@ -20,7 +20,7 @@
                 <MListItemContent>
                     @(I18n.T("First day of week"))
                 </MListItemContent>
-                <MListItemContent Class="setting-item-state">
+                <MListItemContent Class="flex-none">
                     <MListItemSubtitle>
                         @FirstDayOfWeekText
                     </MListItemSubtitle>
