--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
@@ -7,10 +7,10 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="my-list-card"
+    <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")">
-        <MList>
+        <MList Class="py-0">
             <MListItem>
                 <MListItemIcon>
                     <MIcon>
@@ -92,7 +92,7 @@
                 <MListItemContent>
                     @(I18n.T("Time format"))
                 </MListItemContent>
-                <MListItemContent Class="setting-item-state">
+                <MListItemContent Class="flex-none">
                     <MListItemSubtitle>
                         @(I18n.TForTimeFormat(DiaryCardTimeFormatKey))
                     </MListItemSubtitle>
