--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
@@ -7,10 +7,10 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MCard Class="my-list-card"
+    <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")">
-        <MList>
+        <MList Class="py-0">
             <MListItem>
                 <MListItemIcon>
                     <MIcon>
@@ -65,10 +65,10 @@
         </MList>
     </MCard>
 
-    <MCard Class="my-list-card"
+    <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")">
-        <MList>
+        <MList Class="py-0">
             <MListItem>
                 <MListItemIcon>
                     <MIcon>
@@ -96,7 +96,7 @@
                 <MListItemContent>
                     @(I18n.T("Auto save"))
                 </MListItemContent>
-                <MListItemContent Class="setting-item-state">
+                <MListItemContent Class="flex-none">
                     <MListItemSubtitle>
                         @EditAutoSaveText
                     </MListItemSubtitle>
@@ -117,7 +117,7 @@
                 <MListItemContent>
                     @(I18n.T("Time format"))
                 </MListItemContent>
-                <MListItemContent Class="setting-item-state">
+                <MListItemContent Class="flex-none">
                     <MListItemSubtitle>
                         @(I18n.TForTimeFormat(DiaryTimeFormatKey))
                     </MListItemSubtitle>
@@ -145,10 +145,10 @@
         </MList>
     </MCard>
 
-    <MCard Class="my-list-card"
+    <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")">
-        <MList>
+        <MList Class="py-0">
             <MListItem OnClick="@(() => To("outlineSetting"))">
                 <MListItemIcon>
                     <MIcon>
@@ -219,10 +219,10 @@
         </MList>
     </MCard>
 
-    <MCard Class="my-list-card"
+    <MCard Class="mb-5"
            Elevation="0"
            Rounded="@("lg")">
-        <MList>
+        <MList Class="py-0">
             <MListItem>
                 <MListItemIcon>
                     <MIcon>
