--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/UrlSchemePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/UrlSchemePage.razor
@@ -13,8 +13,7 @@
         @foreach (var item in SchemeConstants.Schemes)
         {
             <MChip Value="item"
-                   Filter
-                   Outlined>
+                   Filter>
                 @item
             </MChip>
         }
