🐛 fix: Sponsor list render exception

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
@@ -72,7 +72,7 @@
                 <MList>
                     @foreach (var item in sponsors)
                     {
-                        <MListItem @key="item">
+                        <MListItem>
                             <MListItemContent>
                                 @item
                             </MListItemContent>
