--- a/src/SwashbucklerDiary.Rcl/Components/AppBar/MyAppBar.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/AppBar/MyAppBar.razor
@@ -14,8 +14,11 @@
             </MIcon>
         </MButton>
 
-        <MToolbarTitle Class="font-weight-bold flex-grow-1">
-            <wc-auto-scroll-text>@Title</wc-auto-scroll-text>
-        </MToolbarTitle>
+        @if (!string.IsNullOrEmpty(Title))
+        {
+            <MToolbarTitle Class="font-weight-bold flex-grow-1">
+                <wc-auto-scroll-text>@Title</wc-auto-scroll-text>
+            </MToolbarTitle>
+        }
     }
 </MToolbar>
